<resources>
    <string name="app_name">My Pemeta</string>
    <string name="company_name">Pemeta</string>
    <string name="company_full_name">PT. Pemeta Engineering System</string>
    <string name="company_address">Jl. Suryalaya Barat I No. 7 Bandung 40265</string>
    <string name="company_phone">Telp./Fax. 022–7270354</string>
    <string name="company_email">email: pt_pemeta@yahoo.co.id</string>
    <string name="company_inkindo">Anggota INKINDO Nomor 2217/P/293.JB</string>
    <string name="company_ceo">Luthfi Djatnika, SE.</string>
    <string name="company_director">Lukmanul Hakim, S.Kom.</string>
    <string name="company_commissioner">Nia Restiana, S.Sos.</string>
    <string name="splash_screen_from">From</string>
    <string name="splash_screen_company_name">Pemeta</string>
    <string name="splash_logo_desc">Logo Pemeta</string>
    <string name="splash_loading1">Mohon menunggu sistem sedang</string>
    <string name="splash_loading2">Loading…</string>
    <string name="welcome_continue_guest">Tamu Pemeta</string>
    <string name="welcome_continue_home">Beranda</string>
    <string name="welcome_continue_system_Pemeta">Sistem Informasi Pemeta</string>
    <string name="welcome_continue_employee">Karyawan</string>
    <string name="welcome_version">Versi 1.0\nCopyright &#169;2022 PT. Pemeta Engineering System</string>
    <string name="image_description_slideshow">Slideshow</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_locations">Lokasi</string>
    <string name="title_direksi">Direksi</string>
    <string name="title_system">Pemeta Access</string>
    <string name="title_contact">Hubungi Kami</string>
    <string name="about_us">Tentang Kami</string>
    <string name="snackbar_fabEmailBottom">Jika ada pertanyaan, silakan hubungi kami</string>
    <string name="home_portfolio">Portfolio</string>
    <string name="home_our_project">Projects</string>
    <string name="home_our_client">Clients</string>
    <string name="home_our_experience">Experiences</string>
    <string name="home_our_experts">Our Experts</string>
    <string name="home_about_us">About Us</string>
    <string name="home_company_profile">Profile</string>
    <string name="sistem_pemeta_name">Sistem Informasi Pemeta</string>
    <string name="sistem_pemeta_sub_system">Pengawasan Jalan dan Jembatan</string>
    <string name="sistem_pemeta_absen">Absen</string>
    <string name="sistem_pemeta_upload">Upload</string>
    <string name="sistem_pemeta_cek_upload">Lihat</string>
    <string name="sistem_pemeta_penugasan">Pekerjaan</string>
    <string name="sistem_pemeta_profile">Profil</string>
    <string name="sistem_pemeta_home">Beranda</string>
    <string name="sistem_pemeta_avatar">Photo Personil</string>
    <string name="sistem_pemeta_nama">Selamat datang <b>Lukmanul Hakim</b></string>
    <string name="sistem_pemeta_lapor_hari">Laporan Harian</string>
    <string name="sistem_pemeta_lapor_bulan">Laporan Bulanan</string>
    <string name="sistem_pemeta_lapor_triwulan">Laporan Triwulan</string>
    <string name="sistem_pemeta_request_surat">Permohonan Surat</string>
    <string name="sistem_pemeta_cetak">Cetak Laporan</string>
    <string name="sistem_pemeta_back">Kembali</string>
    <string name="sistem_pemeta_login">Login</string>
    <string name="sistem_pemeta_logout">Logout</string>
    <string name="login_message">Silakan masukkan alamat email dan password Anda untuk masuk ke Sistem Informasi Pemeta</string>
    <string name="login_email">Email :</string>
    <string name="login_email_hint">Email address</string>
    <string name="login_password">Password :</string>
    <string name="login_password_hint">Your Password</string>
    <string name="login">Login</string>
    <string name="login_dont_have_account">Don\'t have account? click here</string>
    <string name="password_invalid">Password must be at least 6 character</string>
    <string name="password_empty">Enter your password</string>
    <string name="requires_email">Please fill your email..</string>
    <string name="requires_password">Please fill your password..</string>
    <string name="password_unmatch">Password don\'t match</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="login_success">Login success: </string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="email_empty">Enter your complete email</string>
    <string name="email_unmatch">email address is not the same</string>
    <string name="name">Name</string>
    <string name="name_invalid">Name must be filled</string>
    <string name="login_activity">LoginActivity</string>
    <string name="login_message_popup">Ready to make a story?</string>
    <string name="login_on_progress">Login on progress</string>
    <string name="login_uncomplete">Complete before login</string>
    <string name="login_warning">No macth Password or email</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="detail_title">Detail Pengalaman</string>
    <string name="detail_name">Nama Pekerjaan</string>
    <string name="detail_location">Lokasi Pekerjaan</string>
    <string name="detail_company_user">Pengguna Jasa</string>
    <string name="detail_about">Detail Pekerjaan</string>
    <string name="detail_year">Masa Pelaksanaan</string>
    <string name="detail_joint_operation">Perusahaan Partner</string>
    <string name="detail_contract_amount">Nilai Kontrak</string>
    <string-array name="data_name">
        <item>Pengawasan Pembangunan Jembatan Kutai Kartanegara (Multiyears)</item>
        <item>Kunjungan Bapak Menteri PUPR ke Lokasi Pekerjaan</item>
        <item>Pengawasan Pembangunan Jalan Planjan-Baron-Tepus (MYC)</item>
        <item>Kunjungan KaBalai dan KaSatker ke Lokasi Pekerjaan</item>
    </string-array>
    <string-array name="data_company_user">
        <item>Dinas Bina Marga dan Sumber Daya Air Kabupaten Kutai Kartanegara</item>
        <item>Satuan Kerja Perencanaan dan Pengawasan Jalan Nasional (P2JN) D.I.Yogyakarta \nKementerian Pekerjaan Umum dan Perumahan Rakyat (PUPR)</item>
        <item>Satuan Kerja Perencanaan dan Pengawasan Jalan Nasional (P2JN) D.I.Yogyakarta \nKementerian Pekerjaan Umum dan Perumahan Rakyat (PUPR)</item>
        <item>Satuan Kerja Perencanaan dan Pengawasan Jalan Nasional (P2JN) D.I.Yogyakarta \nKementerian Pekerjaan Umum dan Perumahan Rakyat (PUPR)</item>
    </string-array>
    <string-array name="data_about_experiences">
        <item>Pekerjaan pengawasan pembangunan jembatan ini membutuhkan waktu 32 bulan / 2,7 tahun. Merupakan jembatan pengganti yang sebelumnya mengalami bencana roboh pada tahun 2012.</item>
        <item>Pekerjaan pengawasan ini merupakan pekerjaan fisik yang membangun jalur baru dengan menyusuri pantai selatan pulau Jawa di wilayah Provinsi D.I Yogyakarta. Jalur ini dikenal dengan nama "Jalur Lintas Selatan" atau JLS. Pembangunannya membutuhkan waktu sekitar 2 tahun untuk diselesaikan dengan baik dan sempurna.</item>
        <item>Pekerjaan pengawasan ini merupakan pekerjaan fisik yang membangun jalur baru dengan menyusuri pantai selatan pulau Jawa di wilayah Provinsi D.I Yogyakarta. Jalur ini dikenal dengan nama "Jalur Lintas Selatan" atau JLS. Pembangunannya membutuhkan waktu sekitar 2 tahun untuk diselesaikan dengan baik dan sempurna.</item>
        <item>Pekerjaan pengawasan ini merupakan pekerjaan fisik yang membangun jalur baru dengan menyusuri pantai selatan pulau Jawa di wilayah Provinsi D.I Yogyakarta. Jalur ini dikenal dengan nama "Jalur Lintas Selatan" atau JLS. Pembangunannya membutuhkan waktu sekitar 2 tahun untuk diselesaikan dengan baik dan sempurna.</item>
    </string-array>
    <string-array name="data_location">
        <item>Kab. Kutai Kartanegara, Prov. Kalimantan Timur</item>
        <item>Kab. Gunung Kidul, Prov. D.I. Yogyakarta</item>
        <item>Kab. Gunung Kidul, Prov. D.I. Yogyakarta</item>
        <item>Kab. Gunung Kidul, Prov. D.I. Yogyakarta</item>
    </string-array>
    <string-array name="data_contract_joint">
        <item>Tunggal</item>
        <item>JO / PT. Anugerah Kridapradana JO PT. Arkade Gahana Konsultan</item>
        <item>JO / PT. Anugerah Kridapradana JO PT. Arkade Gahana Konsultan</item>
        <item>JO / PT. Anugerah Kridapradana JO PT. Arkade Gahana Konsultan</item>
    </string-array>
    <string-array name="data_contract_amount">
        <item>Rp. 7.695.490.000,-</item>
        <item>Rp. 4.359.761.000,-</item>
        <item>Rp. 4.359.761.000,-</item>
        <item>Rp. 4.359.761.000,-</item>
    </string-array>
    <string-array name="data_year_experiences">
        <item>09 April 2013 &#8211; 30 November 2015</item>
        <item>17 November 2020 &#8211; 19 Desember 2022</item>
        <item>17 November 2020 &#8211; 19 Desember 2022</item>
        <item>17 November 2020 &#8211; 19 Desember 2022</item>
    </string-array>
    <string name="data_name1">Pengawasan Pembangunan Jembatan Kutai Kartanegara (Multiyears)</string>
    <string name="data_company_user1">Dinas Bina Marga dan Sumber Daya Air Kabupaten Kutai Kartanegara</string>
    <string name="data_about_experiences1">Pekerjaan pengawasan pembangunan jembatan ini membutuhkan waktu 32 bulan / 2,7 tahun. Merupakan jembatan pengganti yang sebelumnya mengalami bencana roboh pada tahun 2012.</string>
    <string name="data_location1">Kab. Kutai Kartanegara, Prov. Kalimantan Timur</string>
    <string name="data_contract_amount1">Rp. 7.695.490.000,-</string>
    <string name="data_contract_jo1">Tunggal / -</string>
    <string name="data_year_experiences1">09 April 2013 &#8211; 30 November 2015</string>
    <string name="data_name2">Kunjungan Bapak Menteri PUPR ke Lokasi Pekerjaan</string>
    <string name="data_company_user2">Satuan Kerja Perencanaan dan Pengawasan Jalan Nasional (P2JN) D.I.Yogyakarta \nKementerian Pekerjaan Umum dan Perumahan Rakyat (PUPR)</string>
    <string name="data_about_experiences2">Pekerjaan pengawasan ini merupakan pekerjaan fisik yang membangun jalur baru dengan menyusuri pantai selatan pulau Jawa di wilayah Provinsi D.I Yogyakarta. Jalur ini dikenal dengan nama "Jalur Lintas Selatan" atau JLS. Pembangunannya membutuhkan waktu sekitar 2 tahun untuk diselesaikan dengan baik dan sempurna.</string>
    <string name="data_location2">Kab. Gunung Kidul, Prov. D.I. Yogyakarta</string>
    <string name="data_contract_amount2">Rp. 4.359.761.000,-</string>
    <string name="data_contract_jo2">JO / PT. Anugerah Kridapradana JO PT. Arkade Gahana Konsultan</string>
    <string name="data_year_experiences2">17 November 2020 &#8211; 19 Desember 2022</string>
    <string name="data_name3">Pengawasan Pembangunan Jalan Planjan-Baron-Tepus (MYC)</string>
    <string name="data_company_user3">Satuan Kerja Perencanaan dan Pengawasan Jalan Nasional (P2JN) D.I.Yogyakarta \nKementerian Pekerjaan Umum dan Perumahan Rakyat (PUPR)</string>
    <string name="list_pengalaman_title">Pengalaman Perusahaan 10 Tahun terakhir</string>
    <string name="list_pengalaman_description">Berikut ini daftar pengalaman perusahaan 10 tahun terakhir yang telah dilaksanakan oleh PT. Pemeta Engineering System. </string>
    <string name="upload_preview_image">Preview</string>
    <string name="upload_camera_take">Buka Kamera</string>
    <string name="upload_gallery_image">Ambil dari Gallery</string>
    <string name="upload_deskripsi_image">Deskripsi</string>
    <string name="upload_lokasi_image">Lokasi</string>
    <string name="upload_tanggal_image">Tanggal</string>
    <string name="upload_button">Upload</string>
    <string name="upload_cancel">Cancel</string>
    <string name="upload_tanggal_pilih">Masukkan Tanggal</string>
</resources>