<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_direksi"
        android:icon="@drawable/ic_business_human_svgrepo_com"
        android:title="@string/title_direksi" />

    <item
        android:id="@+id/navigation_locations"
        android:icon="@drawable/ic_maps_mark_symbol_svgrepo_com"
        android:title="@string/title_locations" />

</menu>