<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ujanglukmanbdg.pemeta.ui.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_direksi"
        android:name="com.ujanglukmanbdg.pemeta.ui.home.ui.direksi.DireksiFragment"
        android:label="@string/title_direksi"
        tools:layout="@layout/fragment_direksi" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.ujanglukmanbdg.pemeta.ui.home.ui.locations.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_system"
        android:name="com.ujanglukmanbdg.pemeta.ui.home.ui.dashboard.DashboardFragment"
        android:label="@string/title_system"
        tools:layout="@layout/fragment_dashboard" />

</navigation>