<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sistempemeta.upload.UploadActivity">

    <ImageView
        android:id="@+id/upload_preview_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/upload_preview_image"
        app:layout_constraintBottom_toTopOf="@id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo_camera_svgrepo_com"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="285dp" />

    <Button
        android:id="@+id/upload_button_camera"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload_camera_take"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline8" />

    <Button
        android:id="@+id/upload_button_gallery"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:text="@string/upload_gallery_image"
        app:layout_constraintBottom_toBottomOf="@+id/upload_button_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/upload_button_camera"
        app:layout_constraintTop_toTopOf="@+id/upload_button_camera" />

    <EditText
        android:id="@+id/upload_input_text_description"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:gravity="start|top"
        android:hint="@string/upload_deskripsi_image"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_button_camera"
        android:autofillHints="@string/upload_deskripsi_image" />

    <EditText
        android:id="@+id/upload_input_text_lokasi"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="start|top"
        android:hint="@string/upload_lokasi_image"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/upload_input_text_description"
        app:layout_constraintStart_toStartOf="@id/upload_input_text_description"
        app:layout_constraintTop_toBottomOf="@id/upload_input_text_description"
        android:autofillHints="" />

    <TextView
        android:id="@+id/upload_date"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:autofillHints="MM/DD/YYYY"
        android:gravity="start|center_vertical"
        android:hint="@string/upload_tanggal_image"
        android:minHeight="48dp"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/upload_input_text_lokasi"
        app:layout_constraintTop_toBottomOf="@id/upload_input_text_lokasi"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/upload_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/upload_tanggal_pilih"
        app:layout_constraintBottom_toBottomOf="@id/upload_date"
        app:layout_constraintStart_toEndOf="@id/upload_date" />

    <Button
        android:id="@+id/upload_button_upload"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/upload_button"
        app:layout_constraintEnd_toStartOf="@id/upload_button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_date" />

    <Button
        android:id="@+id/upload_button_cancel"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:text="@string/upload_cancel"
        app:layout_constraintBottom_toBottomOf="@id/upload_button_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/upload_button_upload"
        app:layout_constraintTop_toTopOf="@id/upload_button_upload" />


</androidx.constraintlayout.widget.ConstraintLayout>