<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pemeta_hut_ri_77_resize"
    tools:context=".ui.sistempemeta.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="147dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="118dp" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/login_message"
        android:textColor="#E0F7FA"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/login_email"
        android:textColor="#E0F7FA"
        app:layout_constraintStart_toStartOf="@+id/login_message"
        app:layout_constraintTop_toBottomOf="@id/login_message" />

    <com.ujanglukmanbdg.pemeta.ui.sistempemeta.login.edit.MyEmailText
        android:id="@+id/login_email_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#E0F7FA"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/login_email"
        app:layout_constraintTop_toBottomOf="@id/login_email" />

    <TextView
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_password"
        android:textColor="#E0F7FA"
        app:layout_constraintStart_toStartOf="@id/login_email_edit_text"
        app:layout_constraintTop_toBottomOf="@id/login_email_edit_text" />

    <com.ujanglukmanbdg.pemeta.ui.sistempemeta.login.edit.MyPasswordText
        android:id="@+id/login_password_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#E0F7FA"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/login_password"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

    <com.ujanglukmanbdg.pemeta.ui.sistempemeta.login.edit.MySignInButton
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="#B71C1C"
        app:layout_constraintStart_toStartOf="@id/login_password_edit_text"
        app:layout_constraintTop_toBottomOf="@id/login_password_edit_text"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toTopOf="@id/login_button" />

    <TextView
        android:id="@+id/login_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/login_dont_have_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>